# Webshell-Sniper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  TODO.txt  Webshell.txt  generator.py  main.py  mount.py  pyproject.toml  requirments.txt  shell.py  sniper.py  webshell-sniper.py  webshells.json  websniper.py
.github/workflows/: ci.yml  release.yml
core/: WebShell.py  __init__.py
core/banner/: __init__.py  banner.py
core/db/: Mysql.py  __init__.py
core/log/: Log.py  __init__.py  color.py
core/shell/: __init__.py  shell.py
core/utiles/: __init__.py
core/utiles/http/: build_url.py
core/utiles/random_string/: __init__.py
core/utils/: __init__.py
core/utils/function_call/: __init__.py
core/utils/hash/: __init__.py  file.py
core/utils/http/: __init__.py  get_domain.py
core/utils/network/: __init__.py  network.py
core/utils/string_utils/: __init__.py  list2string.py  random_string.py
core/webshell/: WebShell.py  __init__.py
demo/: README.md  driver.py  sniper.cast  webshells.json
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docker/jsp/webapp/: cmd.jsp
docker/mysql-init/: seed.sql
docker/pg-init/: seed.sql
docker/webroot/: index.php
docs/: ARCHITECTURE.md  BACKLOG.md  ROADMAP.md  kali.txt  plugins.md
plugins/gather_info/: get_system_info.py
src/webshell_sniper/: __init__.py  batch.py  cli.py  config.py  encoders.py  exceptions.py  log.py  mount.py  render.py  repl.py  session.py
src/webshell_sniper/core/: channel.py  executor.py  php.py  transport.py  webshell.py
src/webshell_sniper/features/: database.py  enum.py  files.py  (+6 more)
tests/: conftest.py
tests/benchmark/: test_compose.py  test_jsp.py
tests/integration/: test_live_target.py
tests/unit/: test_backend.py  test_channel.py  test_cli.py  test_command_backend.py  test_config.py  test_database.py  test_debug.py  test_download_chunk.py  test_encoders.py  test_enum.py  test_exec_probe.py  test_executor.py  test_features_offline.py  test_filemgr.py  test_fs.py  test_generate.py  test_http.py  test_mount.py  test_php.py  test_plugins_and_batch.py  test_render.py  test_repl.py  test_revshell.py  test_session.py  test_strings.py  test_transport.py  test_tunnel.py
third/: code.txt  index.php
utiles/command_line/: color.py
(+8 files in other folders)
